# LeninGrad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/: ComputationGraph.h  Core.h  Derivative.h  DiffArithmetic.h  DiffArithmeticImpl.h  DiffComparison.h  DiffOps.h  DiffOpsImpl.h  DiffValue.h
test/: ArithmeticTest.cpp  ComparisonTest.cpp  DerivativeTest.cpp  DiffOpTests.cpp  DiffValueTest.cpp  playground.cpp
